--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -42,25 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from hierarchy_metrics import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "graph = nx.karate_club_graph()\n",
-    "dendrogram = hierarchical_clustering(graph, algorithm = \"newman\")"
    ]
   },
   {
@@ -72,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -103,21 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: Openflights\n",
-      "Type: Graph\n",
-      "Number of nodes: 3097\n",
-      "Number of edges: 18193\n",
-      "Average degree:  11.7488\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(nx.info(graph))"
    ]
@@ -130,30 +106,30 @@
    },
    "outputs": [],
    "source": [
-    "# Number of samples for the random algorithm\n",
-    "number_samples = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "dendrogram_paris = hierarchical_clustering(graph, \"paris\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "dendrogram_newman = hierarchical_clustering(graph, \"newman\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Number of samples for the random algorithm (default = 1)\n",
+    "number_samples = 1"
    ]
   },
   {
@@ -170,48 +146,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Relative entropy (weighted, uniform)\n",
-      "Paris hierarchy:  2.7735716948816957 2.9113663048934426\n",
-      "Newman hierarchy:  2.02722899031336 3.5131042696737222\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Relative entropy (weighted, uniform)')\n",
     "print('Paris hierarchy: ', relative_entropy(graph, dendrogram_paris), relative_entropy(graph, dendrogram_paris, False))\n",
     "print('Newman hierarchy: ', relative_entropy(graph, dendrogram_newman), relative_entropy(graph, dendrogram_newman, False))\n",
-    "#print('Random hierarchy: ', np.mean([relative_entropy(graph, d) for d in dendrogram_random]),np.mean([relative_entropy(graph, d, False) for d in dendrogram_random]))"
+    "print('Random hierarchy: ', np.mean([relative_entropy(graph, d) for d in dendrogram_random]),np.mean([relative_entropy(graph, d, False) for d in dendrogram_random]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dasgupta cost (weighted, uniform)\n",
-      "Paris hierarchy:  0.16716504372119464 0.12967721944804603\n",
-      "Newman hierarchy:  0.24642084053212826 0.1383132701120162\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Dasgupta cost (weighted, uniform)')\n",
     "print('Paris hierarchy: ', dasgupta_cost(graph, dendrogram_paris), dasgupta_cost(graph, dendrogram_paris, False))\n",
     "print('Newman hierarchy: ', dasgupta_cost(graph, dendrogram_newman), dasgupta_cost(graph, dendrogram_newman, False))\n",
-    "#print('Random hierarchy: ', np.mean([dasgupta_cost(graph, d) for d in dendrogram_random]), np.mean([dasgupta_cost(graph, d, False) for d in dendrogram_random])) "
+    "print('Random hierarchy: ', np.mean([dasgupta_cost(graph, d) for d in dendrogram_random]), np.mean([dasgupta_cost(graph, d, False) for d in dendrogram_random])) "
    ]
   },
   {
@@ -346,10 +302,12 @@
    },
    "outputs": [],
    "source": [
+    "# Number of samples (default = 100)\n",
+    "number_samples = 100\n",
+    "\n",
     "number_nodes = 100\n",
     "average_degree = 10\n",
     "prob_range = np.arange(0.01,0.2,0.03)\n",
-    "number_samples = 1000\n",
     "results_paris = classification_scores(number_nodes, average_degree, prob_range, number_samples, \"paris\", True)\n",
     "results_newman = classification_scores(number_nodes, average_degree, prob_range, number_samples, \"newman\", True)"
    ]
