--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -74,6 +74,10 @@
     "dataset = \"openflights.graphml.gz\"\n",
     "# Wikipedia for schools\n",
     "#dataset = \"wikipedia_schools_undirected.graphml.gz\"\n",
+    "# DBLP\n",
+    "#dataset = \"DBLP.graphml.gz\"\n",
+    "# Twitter, from SNAP dataset http://snap.stanford.edu\n",
+    "#dataset = \"twitter.graphml.gz\"\n",
     "\n",
     "download = urllib.request.urlretrieve(url + dataset, dataset)"
    ]
