--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -96,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(nx.info(graph))"
@@ -152,6 +154,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -165,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Dasgupta cost (weighted, uniform)')\n",
@@ -280,7 +285,9 @@
    "source": [
     "def classification_scores(number_nodes, average_degree, prob_range, number_samples, algorithm, weighted = True):\n",
     "    results = []\n",
-    "    for prob in prob_range:\n",
+    "    print(\"Progress (%)...\")\n",
+    "    for i,prob in enumerate(prob_range):\n",
+    "        print(int((i+1)/len(prob_range)*100)) \n",
     "        cost = 0.\n",
     "        quality = 0.\n",
     "        for s in range(number_samples):\n",
@@ -301,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of samples (default = 100)\n",
