--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -134,8 +134,8 @@
    },
    "outputs": [],
    "source": [
-    "# Number of samples for the random algorithm (default = 1)\n",
-    "number_samples = 1"
+    "# Number of samples for the random algorithm \n",
+    "number_samples = 100"
    ]
   },
   {
@@ -240,7 +240,7 @@
    },
    "outputs": [],
    "source": [
-    "def generate_graph(dendrogram, average_degree = 10):\n",
+    "def generate_graph(dendrogram, average_degree):\n",
     "    n = np.shape(dendrogram)[0] + 1\n",
     "    similarity = get_similarity(dendrogram)\n",
     "    is_connected = False\n",
@@ -260,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "def add_noise(graph, prob = 0.1):\n",
+    "def add_noise(graph, prob):\n",
     "    is_connected = False\n",
     "    while not is_connected:\n",
     "        new_graph = graph.copy()\n",
@@ -308,16 +308,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Number of samples (default = 100)\n",
-    "number_samples = 100\n",
+    "# Number of samples \n",
+    "number_samples = 1000\n",
     "\n",
     "number_nodes = 100\n",
     "average_degree = 10\n",
     "prob_range = np.arange(0.01,0.2,0.03)\n",
+    "print(\"Paris algorithm\")\n",
     "results_paris = classification_scores(number_nodes, average_degree, prob_range, number_samples, \"paris\", True)\n",
+    "print(\"Newman algorithm\")\n",
     "results_newman = classification_scores(number_nodes, average_degree, prob_range, number_samples, \"newman\", True)"
    ]
   },
